--- a/app/assets/stylesheets/listings/_index.scss
+++ b/app/assets/stylesheets/listings/_index.scss
@@ -1,13 +1,15 @@
 .main-container {
   display: flex;
   flex-direction: column;
+  // height: calc(100vh - 70px);
   width: 100%;
   margin: 16px;
 }
 
 .results {
   overflow-y: scroll;
-  height: 72vh;
+  // height: 72vh;
+  // height: calc(100vh - 70px - 189px - 50px);
   a {
     text-decoration: none;
     color: rgba(0, 0, 0, 0.8);
@@ -24,7 +26,7 @@
 
 .map {
   position: sticky;
-  top: 0;
+  top: 70px;
   img {
     width: 100%;
     height: 36rem;
