--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -26,3 +26,12 @@
 .card-product .card-product-infos {
   padding: 16px;
 }
+
+.listing-card {
+  background: white;
+  box-shadow: 2px 2px 15px rgba(0,0,0,0.1);
+}
+
+.content {
+  padding: 24px 16px;
+}
