--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -1,24 +1,43 @@
 <div class="container">
-  <div class="header">
-    <h1><%= @listing.title %></h1>
-    <h2>Rating ****</h2>
-  </div>
-  <div class="image">
-    <%= image_tag "https://images.unsplash.com/photo-1540991825428-5b54b09f7338?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1197&q=80", alt: "alttext" %>
-  </div>
-  <div class="content">
-    <p><%= @listing.category %></p>
-    <p><%= @listing.price %></p>
-    <p><%= @listing.address %></p>
-  </div>
-  <div class="description">
-    <p>
-      Pellentesque habitant morbi tristique senectus et netus et malesuada
-      fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae,
-      ultricies eget, tempor sit amet, ante. Donec eu libero sit amet
-      quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat
-      eleifend leo.
-    </p>
+  <div class="text-center">
+    <h1 class='my-4'><%= @listing.title %></h1>
   </div>
 
+  <div class="row listing-card">
+
+    <div class="col-6 img-layout">
+      <div class="row mb-2">
+        <img class='big-img' src="https://images.unsplash.com/photo-1540991825428-5b54b09f7338?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1197&q=80" alt="big img">
+      </div>
+      <div class="row d-flex flex-nowrap">
+        <div>
+          <img class="small-img pr-1" src="https://images.unsplash.com/photo-1540991825428-5b54b09f7338?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1197&q=80" alt="small img">
+        </div>
+        <div>
+          <img class="small-img pl-1" src="https://images.unsplash.com/photo-1540991825428-5b54b09f7338?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1197&q=80" alt="small img">
+        </div>
+      </div>
+    </div>
+
+    <div class='col-6 content'>
+      <div class="details">
+        <div class='stars'>
+          <i class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i>
+        </div>
+        <p class='category'><%= @listing.category %></p>
+        <h3><%= @listing.price %>$</h3>
+        <p><%= @listing.address %></p>
+      </div>
+      <div class="description">
+        <p>
+          Pellentesque habitant morbi tristique senectus et netus et malesuada
+          fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae,
+          ultricies eget, tempor sit amet, ante. Donec eu libero sit amet
+          quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat
+          eleifend leo.
+        </p>
+      </div>
+
+    </div>
+  </div>
 </div>
