--- a/app/views/account/bookings/index.html.erb
+++ b/app/views/account/bookings/index.html.erb
@@ -1,16 +1,58 @@
 <div class="d-flex justify-content-center">
   <h1 class="m-5">Welcome back <%= current_user.first_name %>!</h1>
 </div>
+<div class="container justify-content-center">
+  <div class="border-bottom mb-3">
+    <h3>My Upcoming Bookings</h3>
 
-<div class="d-flex justify-content-center border-bottom">
-  <h3>My Upcoming Bookings</h3>
+    <% @current_bookings.each do |booking| %>
+      <div class="card-product  mt-2">
+        <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
+
+        <div class="card-product-infos d-flex justify-content-between align-items-center">
+
+          <div>
+            <h2><%= booking.listing.title %></h2>
+            <h5><%= booking.listing.category %></h5>
+            <h5><%= booking.listing.address %></h5>
+          </div>
+
+          <div>
+          <h5><%= booking.listing.price %></h5>
+          </div>
+
+        </div>
+
+      </div>
+    <% end %>
+  </div>
+  <div class="border-bottom mb-3">
+    <h3>My Past Bookings</h3>
+
+    <% @previous_bookings.each do |booking| %>
+      <div class="card-product mt-2">
+        <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
+
+        <div class="card-product-infos d-flex justify-content-between align-items-center">
+
+          <div>
+            <h2><%= booking.listing.title %></h2>
+            <h5><%= booking.listing.category %></h5>
+            <h5><%= booking.listing.address %></h5>
+          </div>
+
+          <div>
+          <h5><%= booking.listing.price %></h5>
+          </div>
+
+        </div>
+
+      </div>
+    <% end %>
+  </div>
+
+  <div class="border-bottom">
+    <h3>My Current Listings</h3>
+  </div>
+
 </div>
-
-<div class="d-flex justify-content-center border-bottom">
-  <h3>My Past Bookings</h3>
-</div>
-
-<div class="d-flex justify-content-center border-bottom">
-  <h3>My Current Listings</h3>
-</div>
-
