fix of front end on homepage

--- a/app/views/pages/_form.html.erb
+++ b/app/views/pages/_form.html.erb
@@ -1,10 +1,10 @@
 <%= simple_form_for :search, url: listings_path, method: "GET" do |f| %>
-<div class="d-flex justify-content-center">
-  <div class="form-group mr-5">
-    <%= f.input :category, placeholder: 'couch'%>
+<div class="d-flex justify-content-center align-items-center bg-light p-0 rounded" style="height: 5rem;width: 24rem">
+  <div class="form-group mt-4 mr-4">
+    <%= f.input :category, placeholder: 'category', label: false, class: "border"%>
   </div>
-  <div class="form-group d-flex align-items-center mb-0 mt-2">
-  <%= f.submit "Search for Listing", class: "btn btn-light btn-sm" %>
+  <div class="form-group mt-1">
+    <%= f.submit "Search for Listing", class: "btn btn-secondary btn-sm roundeds" %>
   </div>
 </div>
 <% end %>
