--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -5,6 +5,7 @@
       <%= simple_form_for [@listing] do |f| %>
       <%= f.input :title %>
       <%= f.input :category %>
+      <%= f.input :address %>
       <%= f.input :price %>
       <%= f.input :description %>
     </div>
