--- a/app/assets/stylesheets/listings/_show.scss
+++ b/app/assets/stylesheets/listings/_show.scss
@@ -1,3 +1,8 @@
+.show-container {
+  width: 95%;
+  display: inline-flex;
+}
+
 .big-img {
   width: 100%;
 }
@@ -18,3 +23,15 @@
   display: inline-block;
   border-radius: 4px;
 }
+
+.listing-wrapper {
+  background: white;
+  box-shadow: 2px 2px 15px rgba(0,0,0,0.1);
+  margin: 0;
+  padding: 0;
+}
+
+.reviews {
+  padding: 16px;
+}
+
