--- a/app/assets/stylesheets/listings/_show.scss
+++ b/app/assets/stylesheets/listings/_show.scss
@@ -1,3 +1,9 @@
+.show-container {
+  width: 100%;
+  display: inline-flex;
+  padding: 16px;
+}
+
 .big-img {
   width: 100%;
 }
@@ -17,4 +23,37 @@
   padding: 4px;
   display: inline-block;
   border-radius: 4px;
+}
+
+.listing-wrapper {
+  background: white;
+  box-shadow: 2px 2px 15px rgba(0,0,0,0.1);
+  margin: 0;
+  padding: 0;
+}
+
+.reviews {
+  padding: 16px;
+  margin-top: 24px;
+}
+
+.map-show {
+  padding: 0 24px;
+  img {
+    width: 100%;
+    height: 300px;
+    object-fit: none;
+    object-position: 50% 10%;
+  }
+}
+
+.addons {
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  padding: 28px 54px;
+  img {
+    width: 40px;
+    padding-right: 8px;
+  }
 }
