--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -41,7 +41,8 @@
         <% @listings.each do |listing| %>
         <%= link_to listing_path(listing) do %>
         <div class="card-product mb-4">
-          <img src="https://images.unsplash.com/photo-1567016432779-094069958ea5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1400&q=80" />
+          <%= cl_image_tag listing.photo, alt: listing.title %>
+          <!-- <img src="https://images.unsplash.com/photo-1567016432779-094069958ea5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1400&q=80" /> -->
           <div class="card-product-infos p-2">
             <h2><%= listing.title %></h2>
             <p><%= listing.category %></p>
