--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,7 +13,8 @@
     <% @listings.each do |listing| %>
     <div class="col-lg-3 col-md-4 col-sm-6">
       <div class="card m-2 shadow-sm" style="height: 450px; width: 16rem;">
-        <img src="https://pixfeeds.com/images/sleep/pillows/1200-488664889-boy-sleeping-on-couch.jpg" class="card-img-top" alt="Image">
+        <%= cl_image_tag listing.photo, alt: listing.title, crop: :fill, class: "card-img-top photo-wrapper" %>
+        <!-- <img src="https://pixfeeds.com/images/sleep/pillows/1200-488664889-boy-sleeping-on-couch.jpg" class="card-img-top" alt="Image"> -->
         <div class="card-body d-flex flex-column">
           <h3 class="card-title pb-3 border-bottom"><%= listing.title %></h3>
           <div class="d-flex justify-content-between align-items-end mt-auto">
