--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,18 @@
 // Specific CSS for your home-page
+.categories {
+  display: flex;
+  justify-content: center;
+  img {
+    height: 80px;
+    margin: 0 24px;
+  }
+}
+
+a {
+  text-decoration: none;
+  color: rgba(0, 0, 0, 0.8);
+  &:hover {
+    color: $hover;
+    text-decoration: none;
+    }
+}
