--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -13,7 +13,7 @@
           <input type="date" class="form-control" placeholder="Till">
         </div>
         <div class="col-2">
-          <input type="number" class="form-control" placeholder="Guests">
+          <input type="submit" class="btn btn-outline-secondary rounded" value="Search">
         </div>
       </div>
     </form>
@@ -40,10 +40,17 @@
       <div class='results'>
         <% @listings.each do |listing| %>
         <%= link_to listing_path(listing) do %>
-        <div class="card-product mb-4">
-          <img src="https://images.unsplash.com/photo-1567016432779-094069958ea5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1400&q=80" />
+        <div class="card-product">
+          <%= cl_image_tag listing.photo, crop: :fill %>
           <div class="card-product-infos p-2">
+            <div class='d-flex justify-content-between'>
             <h2><%= listing.title %></h2>
+            <div class='stars mb-1'>
+              <% 5.times do %>
+                <i class="fas fa-star"></i>
+              <% end %>
+            </div>
+          </div>
             <p><%= listing.category %></p>
             <p><%= listing.address %></p>
             <p><em>Extra option</em></p>
