--- a/app/views/pages/_form.html.erb
+++ b/app/views/pages/_form.html.erb
@@ -1,10 +1,34 @@
+<!-- Previous working search form: -->
+
 <%= simple_form_for :search, url: listings_path, method: "GET" do |f| %>
 <div class="d-flex justify-content-center align-items-center bg-light p-0 rounded" style="height: 5rem;width: 24rem">
   <div class="form-group mt-4 mr-4">
     <%= f.input :category, placeholder: 'category', label: false, class: "border"%>
   </div>
   <div class="form-group mt-1">
-    <%= f.submit "Search for Listing", class: "btn btn-secondary btn-sm roundeds" %>
+    <%= f.submit "Search for Nap", class: "btn btn-secondary btn-sm rounded" %>
   </div>
 </div>
 <% end %>
+
+
+<!-- Search bar to do: -->
+
+<!-- <div class="searchbar">
+  <form>
+    <div class="form-row">
+      <div class="col-4">
+        <input type="text" class="form-control" placeholder="Address">
+      </div>
+      <div class="col-3">
+        <input type="date" class="form-control" placeholder="From">
+      </div>
+      <div class="col-3">
+        <input type="date" class="form-control" placeholder="Till">
+      </div>
+      <div class="col-2">
+        <input type="submit" class="btn btn-secondary" value="Search">
+      </div>
+    </div>
+  </form>
+</div> -->
