--- a/app/assets/stylesheets/listings/_index.scss
+++ b/app/assets/stylesheets/listings/_index.scss
@@ -26,10 +26,10 @@
 
 .map {
   position: sticky;
-  top: 70px;
+  top: 0;
   img {
     width: 100%;
-    height: 36rem;
+    height: 38rem;
     object-fit: cover;
   }
 }
