--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,13 +10,13 @@
   <h3 class='text-center'>Choose category:</h3>
     <div class="categories">
       <%= link_to listings_path(@query, category: 'couch') do %>
-        <img src="https://image.flaticon.com/icons/svg/673/673277.svg" alt="couch">
+        <img src="https://image.flaticon.com/icons/svg/673/673277.svg" alt="couch" id="couch-icon">
       <% end %>
       <%= link_to listings_path(@query, category: 'yoga mat') do %>
-        <img src="https://image.flaticon.com/icons/svg/1210/1210531.svg" alt="yoga mat">
+        <img src="https://image.flaticon.com/icons/svg/1210/1210531.svg" alt="yoga mat" id="yoga-icon">
       <% end %>
       <%= link_to listings_path(@query, category: 'tent') do %>
-        <img src="https://image.flaticon.com/icons/svg/452/452702.svg" alt="tent">
+        <img src="https://image.flaticon.com/icons/svg/452/452702.svg" alt="tent" id="tent-icon">
       <% end %>
     </div>
 
