--- a/app/assets/stylesheets/listings/_show.scss
+++ b/app/assets/stylesheets/listings/_show.scss
@@ -39,7 +39,7 @@
 }
 
 .map-show {
-  padding: 0 24px;
+  padding: 0;
   img {
     width: 100%;
     height: 300px;
@@ -59,3 +59,7 @@
   }
 }
 
+.map-row {
+  background: #f7f7f7;
+  margin: 0;
+}
