--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -89,7 +89,7 @@
     <div class="booking-form">
       <h3><%= @listing.price %>$ <span>per hour</span></h3>
       <%= simple_form_for [@listing, @booking] do |f| %>
-      <%= f.input :date, value: Date.today %>
+      <%= f.input :date, value: Date.today, as: :string, input_html: {class: "datepicker"} %>
       <%= f.input :time, value: Time.now %>
       <%= f.input :duration, label: 'Duration (hours)'.html_safe, input_html: { min: '0', step: '0.5' }, placeholder: "0.5" %>
       <%= f.input :message, placeholder: "Can't wait to nap on your couch!"%>
