--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -46,3 +46,12 @@
 .img-layout {
   width: 100%;
 }
+
+.card a {
+  text-decoration: none;
+  color: rgba(0, 0, 0, 0.8);
+  &:hover {
+    color: $hover;
+    text-decoration: none;
+    }
+}
