--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -61,6 +61,9 @@
         <div>
           <img src="https://cdn3.iconfinder.com/data/icons/solid-locations-icon-set/64/Massage_therapist_2-512.png" alt=""> massage
         </div>
+        <div>
+          <img src="https://image.flaticon.com/icons/svg/2064/2064847.svg" alt=""> puppy
+        </div>
       </div>
       <div class="col-8 map-show">
         <img src="https://www.evenisgroup.com/wp-content/uploads/2019/05/BUREAU-VITKIN-1170x738.png" alt="map">
