Added leave review form for listings

--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -83,6 +83,12 @@
       </div>
       <% end %>
       <% end %>
+      <%= simple_form_for [@listing, @review] do |f| %>
+      <%= f.input :title %>
+      <%= f.input :rating %>
+      <%= f.input :content %>
+      <%= f.submit "Leave Review!", class: 'btn btn-primary btn-block' %>
+      <% end %>
     </div>
   </div>
   <div class="col-3 booking-form-wrapper">
