fixed bug on show page

--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -90,14 +90,14 @@
         <% end %>
         <% end %>
       </div>
-      <% end %>
-      <% end %>
+      <div class="container">
       <%= simple_form_for [@listing, @review] do |f| %>
       <%= f.input :title %>
       <%= f.input :rating %>
       <%= f.input :content %>
       <%= f.submit "Leave Review!", class: 'btn btn-primary btn-block' %>
       <% end %>
+      </div>
     </div>
     <div class="col-3 booking-form-wrapper">
       <div class="booking-form">
