--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -96,7 +96,7 @@
       <div class='d-flex justify-content-between px-4'>
         <p>Total price:</p> <%= @listing.price %>$
       </div>
-      <%= f.submit "Nap Here!", class: "btn btn-primary btn-block" %>
+      <%= f.submit "Request Nap!", class: "btn btn-primary btn-block" %>
       <% end %>
     </div>
   </div>
