--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -26,6 +26,7 @@
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
             <%= link_to "My Account", account_bookings_path, class: "dropdown-item" %>
             <%= link_to "Edit Account", account_edit_path, class: "dropdown-item" %>
+            <%= link_to "Pending Bookings",  pending_account_bookings_path, class: "dropdown-item" %>
             <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
           </div>
         </li>
