--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -101,14 +101,18 @@
     </div>
     <div class="col-3 booking-form-wrapper">
       <div class="booking-form">
-        <h3><%= @listing.price %>$ <span>per hour</span></h3>
+        <h3>$
+          <span id='hourPrice'><%= @listing.price %></span>
+            <span>per hour</span></h3>
         <%= simple_form_for [@listing, @booking] do |f| %>
         <%= f.input :date, value: Date.today, as: :string, input_html: {class: "datepicker"} %>
         <%= f.input :time, value: Time.now %>
-        <%= f.input :duration, label: 'Duration (hours)'.html_safe, input_html: { min: '0', step: '0.5' }, placeholder: "0.5" %>
+        <span id='quantity'>
+        <%= f.input :duration, label: 'Duration (hours)'.html_safe, input_html: { min: '0.5', step: '0.5' }, placeholder: "1.0" %>
+        </span>
         <%= f.input :message, placeholder: "Can't wait to nap on your couch!"%>
         <div class='d-flex justify-content-between px-4'>
-          <p>Total price:</p> <%= @listing.price %>$
+          <p>Total price:</p> <span id='totalPrice'>$<%= @listing.price %></span>
         </div>
         <%= f.submit "Nap Here!", class: "btn btn-primary btn-block" %>
         <% end %>
