map, banner, searching my address

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,7 +1,7 @@
 .banner {
   background-size: cover;
-  background-position: center;
-  padding: 150px 0;
+  background-position: top 40% center;
+  padding: 220px 0;
   margin-bottom: 24px;
 
   h1 {
