--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -76,9 +76,13 @@
       </div>
     </div>
     <div class="col-4 map-wrapper">
-      <div class="map">
-        <img src="https://www.evenisgroup.com/wp-content/uploads/2019/05/BUREAU-VITKIN-1170x738.png" alt="map">
+
+      <div id="map"
+           style="height: 38rem;"
+           data-markers="<%= @markers.to_json %>"
+           data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
       </div>
+
     </div>
   </div>
 </div>
