--- a/app/assets/stylesheets/listings/_index.scss
+++ b/app/assets/stylesheets/listings/_index.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   // height: calc(100vh - 70px);
   width: 100%;
-  margin: 16px;
+  padding: 16px;
 }
 
 .results {
@@ -24,12 +24,8 @@
   padding: 0;
 }
 
-.map {
+#map {
   position: sticky;
   top: 0;
-  img {
-    width: 100%;
-    height: 38rem;
-    object-fit: cover;
-  }
+  width: 100%;
 }
