--- a/app/views/pages/_form.html.erb
+++ b/app/views/pages/_form.html.erb
@@ -1,34 +1,10 @@
-<!-- Previous working search form: -->
-
-<!-- <%= simple_form_for :search, url: listings_path, method: "GET" do |f| %>
+<%= simple_form_for :search, url: listings_path, method: "GET" do |f| %>
 <div class="d-flex justify-content-center align-items-center bg-light p-0 rounded" style="height: 5rem;width: 24rem">
   <div class="form-group mt-4 mr-4">
-    <%= f.input :category, placeholder: 'category', label: false, class: "border"%>
+    <%= f.input :address, placeholder: 'Address', label: false, class: "border" %>
   </div>
   <div class="form-group mt-1">
-    <%= f.submit "Search for Nap", class: "btn btn-secondary btn-sm rounded" %>
+    <%= f.submit "Search for Nap", class: "btn btn-secondary" %>
   </div>
 </div>
-<% end %> -->
-
-
-<!-- Search bar to do: -->
-
-<div class="d-flex justify-content-center align-items-center bg-light py-3 px-4 rounded">
-  <form>
-    <div class="form-row">
-      <div class>
-        <input type="text" class="form-control" placeholder="Address">
-      </div>
-      <div class='ml-2'>
-        <input type="date" class="form-control" placeholder="Date">
-      </div>
-      <div class='ml-2'>
-        <input type="time" class="form-control" placeholder="Time">
-      </div>
-      <div class='ml-2'>
-        <input type="submit" class="btn btn-secondary" value="Search for Nap">
-      </div>
-    </div>
-  </form>
-</div>
+<% end %>
