--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1540991825428-5b54b09f7338);">
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1540991825428-5b54b09f7338?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2994&q=80);">
   <div class="container">
     <h1 class="d-flex justify-content-around mb-3">Take a nap at</h1>
     <h3 class="d-flex justify-content-around mb-5"><%= render "form", listing: @new_listing %></h3>
