--- a/app/views/account/bookings/pending_bookings.html.erb
+++ b/app/views/account/bookings/pending_bookings.html.erb
@@ -2,7 +2,7 @@
 <div class="container justify-content-center">
 
   <div class="border-bottom mt-5">
-    <h3>My Requested Bookings</h3>
+    <h3>Pending Bookings</h3>
 
     <% @requested_bookings.each do |booking| %>
     <div class="card-product mt-2 d-flex justify-content-between">
