star rating js plugin working

--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -76,36 +76,13 @@
         </div>
       </div>
     </div>
-    <div class="reviews">
-      <h2 class='text-center'>Reviews</h2>
-      <% if @listing.reviews.empty? %>
-      <center><em>No reviews yet</em></center>
-      <% else %>
-      <% @listing.reviews.each do |review| %>
-      <div class='review'>
-        <strong><%= review.title %></strong>
-        <div class='stars'>
-          <% review.rating.times do %>
-          <i class="fas fa-star"></i>
-          <% end %>
-          <% (5 - review.rating).times do %>
-          <i class="far fa-star"></i>
-          <% end %>
-        </div>
-        <p><%= review.content %></p>
-      </div>
-      <% end %>
-      <% end %>
-    </div>
 
     <div class="container">
       <%= simple_form_for [@listing, @review] do |f| %>
-      <%= f.input :title %>
-      <%= f.input :rating %>
-      <%= f.input :content %>
+        <%= f.input :content %>
+        <%= f.input :rating, collection: (1..5).to_a, label: "How was your nap?" %>
       <%= f.submit "Leave Review!", class: 'btn btn-primary btn-block' %>
       <% end %>
-
     </div>
 
   </div>
@@ -127,9 +104,6 @@
         <%= f.submit "Request Nap!", class: "btn btn-primary btn-block" %>
         <% end %>
       </div>
-
-
-
     </div>
   </div>
 </div>
