--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -24,34 +24,43 @@
   <div class="row">
     <% @listings.each do |listing| %>
     <div class="col-lg-3 col-md-4 col-sm-6">
-      <div class="card m-2 shadow-sm" style="height: 500px; width: 17rem;">
         <%= link_to listing_path(listing) do %>
-        <%= cl_image_tag listing.photo, class: 'card-img-top', scrop: :fill %>
-        <div class="card-body d-flex flex-column">
-          <h3 class="card-title pb-3 border-bottom">
-            <%= listing.title %></h3>
+      <div class="home-card">
+
+        <div class='home-card-img'>
+          <div class='img-gradient'>
+            <%= cl_image_tag listing.photo %>
+          </div>
+          <h3 class='home-card-title'>
+            <%= listing.title.upcase %>
+          </h3>
+        </div>
+
+        <div class="home-card-body">
+<!--           <h3 class="card-title pb-3 border-bottom">
+            <%= listing.title %></h3> -->
             <% end %>
             <div class="d-flex justify-content-between align-items-end mt-auto">
               <div>
 
                 <!-- RATING -->
                 <% if listing.reviews.empty? %>
-                <div class='stars'>
-                  <% 5.times do %>
-                  <i class="far fa-star"></i>
-                  <% end %>
-                </div>
+                  <div class='stars'>
+                    <% 5.times do %>
+                    <i class="far fa-star"></i>
+                    <% end %>
+                  </div>
                 <% else %>
-                <div class='stars'>
-                  <% ratings = listing.reviews.map(&:rating) %>
-                  <% avg_rating = (ratings.sum / ratings.length) %></p>
-                  <% avg_rating.times do %>
-                  <i class="fas fa-star"></i>
-                  <% end %>
-                  <% (5 - avg_rating).times do %>
-                  <i class="far fa-star"></i>
-                  <% end %>
-                </div>
+                  <div class='stars'>
+                    <% ratings = listing.reviews.map(&:rating) %>
+                    <% avg_rating = (ratings.sum / ratings.length) %></p>
+                    <% avg_rating.times do %>
+                    <i class="fas fa-star"></i>
+                    <% end %>
+                    <% (5 - avg_rating).times do %>
+                    <i class="far fa-star"></i>
+                    <% end %>
+                  </div>
                 <% end %>
 
                 <p class="card-text"><%= listing.category.capitalize %></p>
